tests/js_error/source_locations/statement/for_in/for_in_next.exp
Error: 
  at has (tests/js_error/source_locations/statement/for_in/for_in_next.js:7:13)
  at <global> (tests/js_error/source_locations/statement/for_in/for_in_next.js:12:12)
