tests/js_error/source_locations/statement/for_in/for_in_next.js
var numHasCalls = 0;

var iter = new Proxy(
  { key: 1 },
  {
    has() {
      throw new Error()
    }
  }
);

for (var x in iter) {}